Fixes SLider spacing

--- a/src/components/DescriptionSlider.scss
+++ b/src/components/DescriptionSlider.scss
@@ -6,7 +6,7 @@
   .slider-content {
     width: 350px;
     margin: 1rem auto;
-    height: 410px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -24,7 +24,7 @@
       background-color: $off-white;
       padding-bottom: -0.5rem;
       .description-line {
-        margin-bottom: 2.5rem;
+        margin-bottom: 1rem;
       }
     }
   }
@@ -44,8 +44,8 @@
     .slider-content {
       background-size: 90%;
       .description {
-          padding-left: 2rem;
-          padding-right: 2rem;
+          padding-left: 1rem;
+          padding-right: 1rem;
       }
     }
     .slider {
